fixed layout issues

--- a/src/modules/ItemPage/ItemPage.scss
+++ b/src/modules/ItemPage/ItemPage.scss
@@ -192,6 +192,8 @@ hr {
   max-width: 100%;
   overflow: hidden;
   gap: 16px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 
   @media (min-width: 1199px) {
     justify-content: space-around;
